# second-course-in-statistical-learning

./: .gitignore  Makefile  Makefile.win  README.md  export_script.py  export_tikz.py  pyproject.toml
Lectures/CS310/: data_workflow.ipynb
data/: CreditCard.csv  acsi_data.csv  hybrid_pyro_pspline_metrics.csv  hybrid_pyro_pspline_predictions.csv  mcycle_hybrid.csv  quadratic_model.csv
images/: autoencoder_image.tex  autoencoder_timeseries.tex  b_spline.tex  b_spline_basis.tex  carseat_regression.tex  counter_test.tex  cox_de_boor.tex  digits_neural_network.tex  large_factor_model.tex  linear_regression.tex  model_hybrid_spline.tex  partial_effects_hybrid_spline.tex  preprocessing_hybrid_spline.tex  quadratic_model.tex  quadratic_model_adam.tex  quadratic_model_var.tex  satisfaction_model.tex  supply_demand.tex  training_hybrid_spline.tex  validation_hybrid_spline.tex
source/: autoencoder_image.py  autoencoder_timeseries.py  b_spline.py  b_spline_basis.py  carseat_regression.py  config_hybrid_spline.py  counter_test.py  cox_de_boor.py  digits_neural_network.py  large_factor_model.py  linear_regression.py  model_hybrid_spline.py  partial_effects_hybrid_spline.py  plots_hybrid_spline.py  preprocessing_hybrid_spline.py  quadratic_model.py  quadratic_model_adam.py  quadratic_model_var.py  run_training_hybrid_spline.py  satisfaction_model.py  supply_demand.py  training_hybrid_spline.py  validation_hybrid_spline.py
